comit productos ... falta ok

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,7 +72,7 @@
     <string name="epu_dir">Dirección</string>
     <string name="epu_pre">Teléfono</string>
     <string name="epu_cont">Contraseña</string>
-    <string name="epu_btn_a">Actulizar Información</string>
+    <string name="epu_btn_a">Actualizar Información</string>
     <string name="epu_btn_c">Cancelar</string>
 
 
